HEParser.java
// Generated from HE.g4 by ANTLR 4.13.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HEParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		ID=18, NUMBER=19, STRING=20, BOOLEAN=21, SUMMON=22, WITH=23, NAMED=24, 
		AS=25, CREATE=26, MAKE=27, LIKE=28, HAS=29, OWNS=30, CARRIES=31, CAN=32, 
		KNOWS_HOW_TO=33, WHEN=34, WHENEVER=35, ON=36, REMEMBERS=37, IS=38, STARTS_AS=39, 
		RETURNS=40, SET=41, TO=42, IF=43, THEN=44, ELSE=45, REPEAT=46, WHILE=47, 
		TELL=48, WAIT=49, RETURN=50, OR=51, AND=52, NOT=53, IMAGE=54, SOUND=55, 
		MUSIC=56, VIDEO=57, FONT=58, SHADER=59, SAY=60, PRINT=61, SECONDS=62, 
		FRAMES=63, NUMBER_TYPE=64, STRING_TYPE=65, BOOLEAN_TYPE=66, PLUS=67, MINUS=68, 
		STAR=69, SLASH=70, BANG=71, NEWLINE=72, WS=73;
	public static final int
		RULE_program = 0, RULE_line = 1, RULE_summon = 2, RULE_withAssets = 3, 
		RULE_assetList = 4, RULE_asset = 5, RULE_assetType = 6, RULE_object = 7, 
		RULE_objectBody = 8, RULE_section = 9, RULE_properties = 10, RULE_abilities = 11, 
		RULE_reactions = 12, RULE_memories = 13, RULE_trigger = 14, RULE_block = 15, 
		RULE_property = 16, RULE_action = 17, RULE_paramList = 18, RULE_parameter = 19, 
		RULE_statement = 20, RULE_say = 21, RULE_change = 22, RULE_decide = 23, 
		RULE_repeat = 24, RULE_call = 25, RULE_waitStmt = 26, RULE_returnStmt = 27, 
		RULE_argList = 28, RULE_expression = 29, RULE_logicOr = 30, RULE_logicAnd = 31, 
		RULE_comparison = 32, RULE_arithmetic = 33, RULE_term = 34, RULE_factor = 35, 
		RULE_unary = 36, RULE_primary = 37, RULE_callExpression = 38, RULE_arrayLiteral = 39, 
		RULE_type = 40, RULE_baseType = 41, RULE_globalStatement = 42, RULE_comment = 43, 
		RULE_compOp = 44, RULE_addOp = 45, RULE_multOp = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "line", "summon", "withAssets", "assetList", "asset", "assetType", 
			"object", "objectBody", "section", "properties", "abilities", "reactions", 
			"memories", "trigger", "block", "property", "action", "paramList", "parameter", 
			"statement", "say", "change", "decide", "repeat", "call", "waitStmt", 
			"returnStmt", "argList", "expression", "logicOr", "logicAnd", "comparison", 
			"arithmetic", "term", "factor", "unary", "primary", "callExpression", 
			"arrayLiteral", "type", "baseType", "globalStatement", "comment", "compOp", 
			"addOp", "multOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'['", "']'", "':'", "'('", "')'", "','", "'^'", 
			"'[]'", "'~'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", null, null, 
			null, null, "'summon'", "'with'", "'named'", "'as'", "'create'", "'make'", 
			"'like'", "'has'", "'owns'", "'carries'", "'can'", null, "'when'", "'whenever'", 
			"'on'", "'remembers'", "'is'", "'starts as'", "'returns'", "'set'", "'to'", 
			"'if'", "'then'", "'else'", "'repeat'", "'while'", "'tell'", "'wait'", 
			"'return'", "'or'", "'and'", "'not'", "'image'", "'sound'", "'music'", 
			"'video'", "'font'", "'shader'", "'say'", "'print'", "'seconds'", "'frames'", 
			"'number'", "'string'", "'boolean'", "'+'", "'-'", "'*'", "'/'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "ID", "NUMBER", "STRING", "BOOLEAN", 
			"SUMMON", "WITH", "NAMED", "AS", "CREATE", "MAKE", "LIKE", "HAS", "OWNS", 
			"CARRIES", "CAN", "KNOWS_HOW_TO", "WHEN", "WHENEVER", "ON", "REMEMBERS", 
			"IS", "STARTS_AS", "RETURNS", "SET", "TO", "IF", "THEN", "ELSE", "REPEAT", 
			"WHILE", "TELL", "WAIT", "RETURN", "OR", "AND", "NOT", "IMAGE", "SOUND", 
			"MUSIC", "VIDEO", "FONT", "SHADER", "SAY", "PRINT", "SECONDS", "FRAMES", 
			"NUMBER_TYPE", "STRING_TYPE", "BOOLEAN_TYPE", "PLUS", "MINUS", "STAR", 
			"SLASH", "BANG", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HE.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HEParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HEParser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HEVisitor ) return ((HEVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 11)) & ~0x3f) == 0 && ((1L << (_la - 11)) & 2307532272464664577L) != 0)) {
				{
				{
				setState(94);
				line();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public SummonContext summon() {
			return getRuleContext(SummonContext.class,0);
		}
		public WithAssetsContext withAssets() {
			return getRuleContext(WithAssetsContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public GlobalStatementContext globalStatement() {
			return getRuleContext(GlobalStatementContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(HEParser.NEWLINE, 0); }
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HEVisitor ) return ((HEVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				summon();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				withAssets();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				object();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(105);
				globalStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(106);
				comment();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(107);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SummonContext extends ParserRuleContext {
		public TerminalNode SUMMON() { return getToken(HEParser.SUMMON, 0); }
		public TerminalNode STRING() { return getToken(HEParser.STRING, 0); }
		public TerminalNode ID() { return getToken(HEParser.ID, 0); }
		public TerminalNode NAMED() { return getToken(HEParser.NAMED, 0); }
		public TerminalNode AS() { return getToken(HEParser.AS, 0); }
		public SummonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_summon; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).enterSummon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).exitSummon(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HEVisitor ) return ((HEVisitor<? extends T>)visitor).visitSummon(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SummonContext summon() throws RecognitionException {
		SummonContext _localctx = new SummonContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_summon);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(SUMMON);
			setState(111);
			match(STRING);
			setState(112);
			_la = _input.LA(1);
			if ( !(_la==NAMED || _la==AS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(113);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WithAssetsContext extends ParserRuleContext {
		public TerminalNode WITH() { return getToken(HEParser.WITH, 0); }
		public AssetListContext assetList() {
			return getRuleContext(AssetListContext.class,0);
		}
		public WithAssetsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_withAssets; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).enterWithAssets(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).exitWithAssets(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HEVisitor ) return ((HEVisitor<? extends T>)visitor).visitWithAssets(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WithAssetsContext withAssets() throws RecognitionException {
		WithAssetsContext _localctx = new WithAssetsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_withAssets);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(WITH);
			setState(116);
			assetList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssetListContext extends ParserRuleContext {
		public List<AssetContext> asset() {
			return getRuleContexts(AssetContext.class);
		}
		public AssetContext asset(int i) {
			return getRuleContext(AssetContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(HEParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(HEParser.AND, i);
		}
		public AssetListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assetList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).enterAssetList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).exitAssetList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HEVisitor ) return ((HEVisitor<? extends T>)visitor).visitAssetList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssetListContext assetList() throws RecognitionException {
		AssetListContext _localctx = new AssetListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assetList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			asset();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(119);
				match(AND);
				setState(120);
				asset();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssetContext extends ParserRuleContext {
		public AssetTypeContext assetType() {
			return getRuleContext(AssetTypeContext.class,0);
		}
		public TerminalNode STRING() { return getToken(HEParser.STRING, 0); }
		public TerminalNode NAMED() { return getToken(HEParser.NAMED, 0); }
		public TerminalNode ID() { return getToken(HEParser.ID, 0); }
		public AssetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asset; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).enterAsset(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).exitAsset(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HEVisitor ) return ((HEVisitor<? extends T>)visitor).visitAsset(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssetContext asset() throws RecognitionException {
		AssetContext _localctx = new AssetContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_asset);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			assetType();
			setState(127);
			match(STRING);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAMED) {
				{
				setState(128);
				match(NAMED);
				setState(129);
				match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssetTypeContext extends ParserRuleContext {
		public TerminalNode IMAGE() { return getToken(HEParser.IMAGE, 0); }
		public TerminalNode SOUND() { return getToken(HEParser.SOUND, 0); }
		public TerminalNode MUSIC() { return getToken(HEParser.MUSIC, 0); }
		public TerminalNode VIDEO() { return getToken(HEParser.VIDEO, 0); }
		public TerminalNode FONT() { return getToken(HEParser.FONT, 0); }
		public TerminalNode SHADER() { return getToken(HEParser.SHADER, 0); }
		public AssetTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assetType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).enterAssetType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).exitAssetType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HEVisitor ) return ((HEVisitor<? extends T>)visitor).visitAssetType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssetTypeContext assetType() throws RecognitionException {
		AssetTypeContext _localctx = new AssetTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assetType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1134907106097364992L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(HEParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HEParser.ID, i);
		}
		public ObjectBodyContext objectBody() {
			return getRuleContext(ObjectBodyContext.class,0);
		}
		public TerminalNode CREATE() { return getToken(HEParser.CREATE, 0); }
		public TerminalNode MAKE() { return getToken(HEParser.MAKE, 0); }
		public TerminalNode LIKE() { return getToken(HEParser.LIKE, 0); }
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).enterObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).exitObject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HEVisitor ) return ((HEVisitor<? extends T>)visitor).visitObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_object);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_la = _input.LA(1);
			if ( !(_la==CREATE || _la==MAKE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(135);
			match(ID);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIKE) {
				{
				setState(136);
				match(LIKE);
				setState(137);
				match(ID);
				}
			}

			setState(140);
			match(T__0);
			setState(141);
			objectBody();
			setState(142);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectBodyContext extends ParserRuleContext {
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public List<ObjectContext> object() {
			return getRuleContexts(ObjectContext.class);
		}
		public ObjectContext object(int i) {
			return getRuleContext(ObjectContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public List<WithAssetsContext> withAssets() {
			return getRuleContexts(WithAssetsContext.class);
		}
		public WithAssetsContext withAssets(int i) {
			return getRuleContext(WithAssetsContext.class,i);
		}
		public ObjectBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).enterObjectBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).exitObjectBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HEVisitor ) return ((HEVisitor<? extends T>)visitor).visitObjectBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectBodyContext objectBody() throws RecognitionException {
		ObjectBodyContext _localctx = new ObjectBodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_objectBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 120469063680L) != 0)) {
				{
				setState(148);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
				case WHEN:
				case WHENEVER:
				case ON:
					{
					setState(144);
					section();
					}
					break;
				case CREATE:
				case MAKE:
					{
					setState(145);
					object();
					}
					break;
				case T__10:
					{
					setState(146);
					comment();
					}
					break;
				case WITH:
					{
					setState(147);
					withAssets();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SectionContext extends ParserRuleContext {
		public PropertiesContext properties() {
			return getRuleContext(PropertiesContext.class,0);
		}
		public AbilitiesContext abilities() {
			return getRuleContext(AbilitiesContext.class,0);
		}
		public ReactionsContext reactions() {
			return getRuleContext(ReactionsContext.class,0);
		}
		public MemoriesContext memories() {
			return getRuleContext(MemoriesContext.class,0);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).exitSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HEVisitor ) return ((HEVisitor<? extends T>)visitor).visitSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_section);
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				properties();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				abilities();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(155);
				reactions();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(156);
				memories();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropertiesContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HEParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode HAS() { return getToken(HEParser.HAS, 0); }
		public TerminalNode OWNS() { return getToken(HEParser.OWNS, 0); }
		public TerminalNode CARRIES() { return getToken(HEParser.CARRIES, 0); }
		public PropertiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_properties; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).enterProperties(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEListener ) ((HEListener)listener).exitProperties(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HEVisitor ) return ((HEVisitor<? extends T>)visitor).visitProperties(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertiesContext properties() throws RecognitionException {
		PropertiesContext _localctx = new PropertiesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_properties);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(ID);
			setState(160);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3758096384L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(161);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
